# sor-night-ws

./: .gitignore  CHANGELOG.md  CLAUDE.md  FINE_TUNING_IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml
data/: eval.jsonl  train.jsonl
data/openai_training/: eval_openai.jsonl  train_openai.jsonl
docs/: sor-juana-llm-training.mdx
scripts/: README.md  local-training.py  monitor_job.py  prepare_training_data.py  quick_start.sh  test_improvements.py  test_model.py  train_openai.py
sor_juana/: __init__.py  cli.py  config.py  database.py  evaluation.py  local_training.py  processing.py  training.py  workflows.py
sor_juana/downloaders/: __init__.py  base.py  bvmc.py  gutenberg.py  wikisource.py
