[tool.poetry]
name = "sor-juana-downloader"
version = "0.1.0"
description = "DBOS-powered downloader and processor for Sor Juana Inés de la Cruz texts"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "sor_juana"}]

[tool.poetry.scripts]
sor-juana = "sor_juana.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
mwclient = "^0.10.1"
dbos = "^1.0.0"
datasketch = "^1.6.0"
nltk = "^3.8.0"
lxml = "^5.0.0"
duckdb = "^1.0.0"
click = "^8.1.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
line-length = 120
target-version = "py310"

